# ai-launchpad

./: .env.example  .gitignore  README.md  pyproject.toml
ai_launchpad/agents_module/: README.md
ai_launchpad/agents_module/agent_from_scratch/: 1_llms.py  2_tool_calling.py  3_retrieval.py  4_long_term_memory.py  5_short_term_memory.py  6_agent.py  README.md
ai_launchpad/agents_module/agent_from_scratch/knowledgebase/: faq.json  products.json
ai_launchpad/agents_module/agent_with_mcp/: 1_mcp_client.py  1_mcp_client_demo.py  README.md  main.py  mcp_config.json
ai_launchpad/agents_module/agent_with_mcp/crm_db/: crm.json
ai_launchpad/agents_module/agent_with_mcp/tools/: memory_mcp.py  retrieval_mcp.py  tools.py
ai_launchpad/langgraph_module/: .env.example  README.md
ai_launchpad/langgraph_module/effective_agents/: README.md
ai_launchpad/langgraph_module/effective_agents/agents/: 8_agent.py
ai_launchpad/langgraph_module/effective_agents/building_blocks/: 1_llm.py
ai_launchpad/langgraph_module/effective_agents/workflows/: 5_parallelization.py  6_orchestrator-workers.py  7_evaluator-optimizer.py
ai_launchpad/langgraph_module/frontends/: README.md
ai_launchpad/langgraph_module/langgraph_server/: README.md  langgraph.json
langgraph/: README.md
langgraph/effective-agents/: README.md
langgraph/effective-agents/agents/: 8_agent.py
langgraph/effective-agents/building-blocks/: 2_augmented_llm.py
langgraph/effective-agents/workflows/: 3_prompt_chaining.py  4_routing.py  5_parallelization.py  6_orchestrator-workers.py  7_evaluator-optimizer.py
(+5 files in other folders)
